--- a/game.html
+++ b/game.html
@@ -7,15 +7,16 @@
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body onload="startGame()">
-	<div id='control'>
-		<div>
-		<button onmousedown="moveUp()" onmouseup="clearMove()" ontouchstart="moveUp()" >UP</button><br>
-		<button onmousedown="moveLeft()" onmouseup="clearMove()" ontouchstart="moveLeft()">Left</button>
-		<button onmousedown="moveRight()" onmouseup="clearMove()" ontouchstart="moveRight()">Right</button><br>
-		<button onmousedown="moveDown()" onmouseup="clearMove()" ontouchstart="moveDown()">Down</button>
+	<div class="container">
+		<div class="space"></div>
+		<div class="control">
+			<button onmousedown="moveUp()" onmouseup="clearMove()" ontouchstart="moveUp()" >UP</button><br>
+			<button onmousedown="moveLeft()" onmouseup="clearMove()" ontouchstart="moveLeft()">Left</button>
+			<button onmousedown="moveRight()" onmouseup="clearMove()" ontouchstart="moveRight()">Right</button><br>
+			<button onmousedown="moveDown()" onmouseup="clearMove()" ontouchstart="moveDown()">Down</button>
 		</div>
-		<div>
-			<button onclick=" ">Start</button>
+		<div class="S">
+			<button>Start</button>
 		</div>
 	</div>
  <script src="gamePiece.js"></script>
