make the web look a lil more pretty and responsive, yet to fix restart

--- a/game.html
+++ b/game.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body onload="index()">
+	<div class="screen">
+		<div id="canvas"></div>
+		<p>Game Boy</p>
+	</div>
 	<div class="interact">
 		<div id="cntl" class="cntl">
 			<div class="up" onmousedown="moveUp()" onmouseup="clearMove()" ontouchstart="moveUp()" >^</div><br>
