--- a/game.html
+++ b/game.html
@@ -7,12 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body onload="index()">
-	<div class="screen">
+	<div id="screen">
 		<div id="canvas"></div>
 		<p>Game Boy</p>
 	</div>
-	<div class="interact">
-		<div id="cntl" class="cntl">
+	<div id="interact">
+		<div id="cntl">
 			<div class="up" onmousedown="moveUp()" onmouseup="clearMove()" ontouchstart="moveUp()" >^</div><br>
 			<div class="left" onmousedown="moveLeft()" onmouseup="clearMove()" ontouchstart="moveLeft()"><</div>
 			<div class="right" onmousedown="moveRight()" onmouseup="clearMove()" ontouchstart="moveRight()">></div><br>
