--- a/game.html
+++ b/game.html
@@ -9,7 +9,9 @@
 <body onload="index()">
 	<div id="screen">
 		<div id="canvas"></div>
-		<p>Game Boy</p>
+	</div>
+	<div id="title">
+		<h2>Xi</h2>
 	</div>
 	<div id="interact">
 		<div id="cntl">
