--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
 	<title>Game</title>
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
-<body id="body" onload="index()">
+<body id="body" onmousedown="return false" onselectstart="return false" onload="index()">
 	<div id="screen">
 		<div id="canvas"></div>
 	</div>
