--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
 	<title>Game</title>
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
-<body id="body"  onmousedown="return false" onselectstart="return false" onload="index()">
+<body id="body"  onmousedown="return false" onselectstart="return false" onload="startGame()">
 	<div id="screen">
 		<div id="canvas"></div>
 	</div>
@@ -15,11 +15,11 @@
 	</div>
 	<div id="interact">
 		<div id="cntl">
-			<div class="up button" onmousedown="moveUp()" onmouseup="clearMove()" ontouchstart="moveUp()" ontouchend="clearMove()">^</div><br>
-			<div class="left button" onmousedown="moveLeft()" onmouseup="clearMove()" ontouchstart="moveLeft()" ontouchend="clearMove()"><</div>
+			<div class="up button" onclick="chooseUp()" onmousedown="moveUp()" onmouseup="clearMove()" ontouchstart="moveUp()" ontouchend="clearMove()">^</div><br>
+			<div class="left button" onclick="chooseUp()" onmousedown="moveLeft()" onmouseup="clearMove()" ontouchstart="moveLeft()" ontouchend="clearMove()"><</div>
 			<div id="center" class="center button" onclick="select()" onmousedown="speedUp()" onmouseup="clearMove()" ontouchstart="speedUp()" ontouchend="clearMove()"></div>
-			<div class="right button" onmousedown="moveRight()" onmouseup="clearMove()" ontouchstart="moveRight()" ontouchend="clearMove()">></div><br>
-			<div class="down button" onmousedown="moveDown()" onmouseup="clearMove()" ontouchstart="moveDown()" ontouchend="clearMove()">~</div>				
+			<div class="right button" onclick="chooseDown()" onmousedown="moveRight()" onmouseup="clearMove()" ontouchstart="moveRight()" ontouchend="clearMove()">></div><br>
+			<div id="down" class="down button" onclick="chooseDown()" onmousedown="moveDown()" onmouseup="clearMove()" ontouchstart="moveDown()" ontouchend="clearMove()" >~</div>				
 		</div>
 	</div>
  <script src="game.js"></script>
